Upgrade segunda parte, errores de compilación finalizados

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -10,13 +10,13 @@
 ####################################################################
 ############## SonarQube ###########################################
 ####################################################################
-sonar.projectName=SDH
-sonar.projectKey=SDH
-sonar.projectVersion=1.0
-sonar.extensions=sdhpse,sdhpsaddon,sdhcore,sdhinitialdata,sdhfacades,sdhstorefront
+#sonar.projectName=SDH
+#sonar.projectKey=SDH
+#sonar.projectVersion=1.0
+#sonar.extensions=sdhpse,sdhpsaddon,sdhcore,sdhinitialdata,sdhfacades,sdhstorefront
 #for SonarQube > 6.4
-sonar.host.url=http://localhost:9000
-sonar.login=806558a806e69a8defec1c6f0b62324d671e958d
+#sonar.host.url=http://localhost:9000
+#sonar.login=806558a806e69a8defec1c6f0b62324d671e958d
 #for SonarQube <= 6.4
 #sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance
 
@@ -29,7 +29,6 @@ tenant.restart.on.connection.error=false
 #task.engine.loadonstartup=true
 system.unlocking.disabled=true
 
-installed.tenants=
 build.development.mode=true
 tomcat.development.mode=true
 storefront.staticResourceFilter.response.header.Cache-Control=public,max-age=86400
@@ -40,8 +39,6 @@ storefront.wro4j.enabled=false
 #cms.cache.enabled=true
 #Time to live of instances in the cache in seconds (default: 300)
 #regioncache.cmsregion.ttl=3600
-
-tomcat.ajp.secureport=8009
 
 ####################################################################
 ##### --- Database settings for Sap Hana db --- ####################
@@ -107,7 +104,9 @@ catalog.sync.workers=4
 build.parallel=true
 java.mem=4G
 cache.main=300000
-tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -Xss256K -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+CMSClassUnloadingEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSParallelRemarkEnabled -XX:+ParallelRefProcEnabled -XX:+CMSScavengeBeforeRemark  -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:"${HYBRIS_LOG_DIR}/tomcat/java_gc.log" -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs=../lib/endorsed -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M -XX:NewSize=640M -XX:MaxNewSize=640M
+#TODO se modificó el tomcat general option por tener instrucciones descontinuadas para la nueva versión
+#tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -Xss256K -XX:+DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+CMSClassUnloadingEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSParallelRemarkEnabled -XX:+ParallelRefProcEnabled -XX:+CMSScavengeBeforeRemark -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M -XX:NewSize=640M -XX:MaxNewSize=640M
+tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -Xss256K
 #tomcat.generaloptions.jmxsettings=-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true
 #tomcat.generaloptions= -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME%-Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="/opt/hybris/temp/hybris" ${tomcat.generaloptions.jmxsettings} ${tomcat.generaloptions.jvmsettings}
 #tomcat.generaloptions.jvmsettings=-Xms10g -Xmx10g -XX:+UseG1GC -XX:+UseTLAB -XX:+PrintTenuringDistribution -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:/opt/hybris/log/tomcat/java_gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=1M -XX:ParallelGCThreads=4 -XX:ConcGCThreads=1 -XX:+UseStringDeduplication 
@@ -116,9 +115,6 @@ tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -Xss256K -XX:+DisableExpli
 ##############################Cluster Settings######################
 ####################################################################
 
-tomcat.http.port=9001
-tomcat.ssl.port=9002
-tomcat.ajp.port=8009
 tomcat.jmx.port=9003
 tomcat.jmx.server.port=9004
 
