Pantalla de inicio e impuestos-vehicular: ajustes para WS validaContrib (validaCont simplificado) e ingreso/impVehicular

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -139,6 +139,19 @@ sdh.validacontribuyente.user=wspouser
 sdh.validacontribuyente.password=POw3bs3rv18
 
 ####################################################################
+################ Valida contribuyente simplificado #################
+sdh.validacontribuyente_simplificado.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/validaContrib/
+sdh.validacontribuyente_simplificado.user=wspouser
+sdh.validacontribuyente_simplificado.password=PodBogda1ados20*
+
+####################################################################
+################ Valida contribuyente simplificado #################
+################ Valida contribuyente simplificado - vehiculos #####
+sdh.validacontribuyente_simplificado_impVehicular.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/impVehicular
+sdh.validacontribuyente_simplificado_impVehicular.user=wspouser
+sdh.validacontribuyente_simplificado_impVehicular.password=PodBogda1ados20*
+
+####################################################################
 ################ Actualiza mi RIT ##################################
 sdh.creamodcontribuyente.url=https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/ingreso/creamodCont/
 sdh.creamodcontribuyente.user=wspouser
