--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/project.properties
@@ -55,7 +55,7 @@ sdh.orbeon.address.is-address-book-not-empty=primary-address-is-address-book-not
 sdh.url.whitelist=/my-account,/my-account/my-relationships,/my-account/address-book
 
 ##### orbeon properties #####
-xyformsservices.orbeon.url.address=http\://publicsector.local\:9001/orbeon
+xyformsservices.orbeon.url.address=http\://publicsector.local\:9001/web-orbeon
 xyformsstorefrontcommons.orbeon.persistence-api.hostname=publicsector.local
 xyformsstorefrontcommons.orbeon.persistence-api.port=9002
 
