--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -46,7 +46,7 @@ addonfilter.active=false
 storefront.resourceBundle.cacheSecond=1
 tenant.restart.on.connection.error=false
 #task.engine.loadonstartup=true
-system.unlocking.disabled=true
+#system.unlocking.disabled=true
 
 build.development.mode=true
 tomcat.development.mode=true
