Se agregan cambios para Servicio de Gasolina Simplificado

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -325,6 +325,13 @@ sdh.sobretasaGasolina.cantidadAnioGravableBusqueda=6
 
 ###################################################################
 ######## Despliega detalle del objeto ############################# 
+sdh.gasolinaSimpli.url:https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/impGasolina
+sdh.gasolinaSimpli.user=wspouser
+sdh.gasolinaSimpli.password=PodBogda1ados20*
+
+
+###################################################################
+######## Gasolina Servicio Simplificado ############################# 
 sdh.detalleGasolina.url:https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/infObjeto/Gasolina/
 sdh.detalleGasolina.user=wspouser
 sdh.detalleGasolina.password=PodBogda1ados20*
