Ajsutes para pagina inicial del impuesto delineacion con validaContribuyente simplificado

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -155,6 +155,12 @@ sdh.validacontribuyente_simplificado_impVehicular.url=https://vhshdpodci.hec.shd
 sdh.validacontribuyente_simplificado_impVehicular.user=wspouser
 sdh.validacontribuyente_simplificado_impVehicular.password=PodBogda1ados20*
 
+sdh.validacontribuyente_simplificado_impDelineacion.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/impDelineacion
+sdh.validacontribuyente_simplificado_impDelineacion.user=wspouser
+sdh.validacontribuyente_simplificado_impDelineacion.password=PodBogda1ados20*
+
+
+
 ####################################################################
 ################ Genera declaracion ################################
 sdh.generaDeclaracion.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/generaDeclaracion/
