impPredial New Web Service Contract

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -618,6 +618,12 @@ sdh.agentesAutBP.createCase.user=wspouser
 sdh.agentesAutBP.createCase.password=PodBogda1ados20*
 
 ####################################################################
+############ Ingreso - Impuesto Predial ############################
+sdh.ingreso.impPredial.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/impPredial
+sdh.ingreso.impPredial.user=wspouser
+sdh.ingreso.impPredial.password=PodBogda1ados20*
+
+####################################################################
 ########## Servicios de pago en línea###############################
 ####################################################################
 
