--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/project.properties
@@ -1,4 +1,4 @@
-#Thu, 27 Dec 2018 10:41:21 -0600
+#Mon, 28 Jun 2021 15:42:07 -0500
 # -----------------------------------------------------------------------
 # [y] hybris Platform 
 # 
@@ -31,28 +31,28 @@ sdhpsaddon.redirect.order=/my-account/application/%s
 # For example you may setup a URL mapping as follows:
 # NOTE you should define your mapping in your config/local.properties rather
 # than here in the extension's properties file.
-website.sdh.http=http\://publicsector.local\:9001/sdhstorefront
-website.sdh.https=https\://publicsector.local\:9002/sdhstorefront
+website.publicsector.http=http\://publicsector.local\:9001/sdhstorefront
+website.publicsector.https=https\://publicsector.local\:9002/sdhstorefront
 
 # Qualified media URLs for each CMSWebSite used to load images and other media
-media.sdh.http=http\://publicsector.local\:9001
-media.sdh.https=https\://publicsector.local\:9002
+media.publicsector.http=http\://publicsector.local\:9001
+media.publicsector.https=https\://publicsector.local\:9002
 
 share.fb.appid=145634995501895
 
-sdh.address.default.country=GB
+publicsector.address.default.country=GB
 
 #number of bills to show in overview page
 bills.overview.result.count=3
 
 #Reusable Address Component Fields
-sdh.orbeon.address.is-anonymous-user=primary-address-is-anonymous-user
-sdh.orbeon.address.logged-in-user=primary-address-logged-in-user
-sdh.orbeon.address.use-primary-address=use-primary-address
-sdh.orbeon.address.is-address-book-not-empty=primary-address-is-address-book-not-empty
+publicsector.orbeon.address.is-anonymous-user=primary-address-is-anonymous-user
+publicsector.orbeon.address.logged-in-user=primary-address-logged-in-user
+publicsector.orbeon.address.use-primary-address=use-primary-address
+publicsector.orbeon.address.is-address-book-not-empty=primary-address-is-address-book-not-empty
 
 #All urls that are captured from request and redirected, must be added here
-sdh.url.whitelist=/my-account,/my-account/my-relationships,/my-account/address-book
+publicsector.url.whitelist=/my-account,/my-account/my-relationships,/my-account/address-book
 
 ##### orbeon properties #####
 xyformsservices.orbeon.url.address=http\://publicsector.local\:9001/web-orbeon
