--- a/hybris/hybris/bin/custom/sdh/sdhrelationshipsaddon/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhrelationshipsaddon/project.properties
@@ -1,4 +1,4 @@
-#Thu, 27 Dec 2018 10:41:21 -0600
+#Mon, 28 Jun 2021 15:42:30 -0500
 # -----------------------------------------------------------------------
 # [y] hybris Platform 
 # 
@@ -30,4 +30,4 @@ sdhrelationshipsaddon.css.paths.responsive=/responsive/common/css/sdhrelationshi
 
 sdhrelationshipsaddon.storefront=sdhstorefront
 
-sdhstorefront.wro4jconfigscan.sdhrelationshipsaddon=true
+sdhpsaddon.wro4jconfigscan.sdhrelationshipsaddon=true
