--- a/hybris/hybris/bin/custom/sdh/sdhpse/build.xml
+++ b/hybris/hybris/bin/custom/sdh/sdhpse/build.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0"?>
 <!--
- [y] hybris Platform
-
- Copyright (c) 2018 SAP SE or an SAP affiliate company. All rights reserved.
-
- This software is the confidential and proprietary information of SAP
- ("Confidential Information"). You shall not disclose such Confidential
- Information and shall use it only in accordance with the terms of the
- license agreement you entered into with SAP.
+ Copyright (c) 2020 SAP SE or an SAP affiliate company. All rights reserved.
 -->
 <project name="sdhpse" default="all">
 	<property file="platformhome.properties" />
@@ -27,7 +20,7 @@
           IF YOU WANT TO ADAPT THE BUILD PROCESS, CREATE A FILE
           CALLED buildcallbacks.xml IN YOUR EXTENSION.
           PLEASE ALSO REFER TO THE DOCUMENTATION ON THE HYBRIS HELP SITE
-          (https://help.hybris.com/6.4.0/hcd/8b6ded0d86691014a6fab18e171c1f91.html).
+          (https://help.sap.com/viewer/d0224eca81e249cb821f2cdf45a82ace/2005/en-US/8b6ded0d86691014a6fab18e171c1f91.html).
 
 
  *** WARNING *** WARNING *** WARNING *** WARNING *** WARNING *** WARNING *** WARNING ***
@@ -47,10 +40,6 @@
 
 	<target name="deploy" description="deploy complete extension">
 		<deploy />
-	</target>
-
-	<target name="log4j">
-		<log4j />
 	</target>
 
 	<target name="jspcompile" description="do jspcompile even if switched off">
@@ -96,12 +85,8 @@
 		<cleanwar extname="${extname}" />
 	</target>
 
-	<target name="pmd" description="Tests the source code with the pmd rules.">
-		<pmd_start extensions="${extname}" />
-	</target>
-	
-	<target name="sonar" description="Executes sonar to check this project with the sonar rules.">
-		<sonarsingle extensions="${extname}"/>
+	<target name="sonarcheck" description="Executes sonar to check this project with the sonar rules.">
+		<sonarcheck extensions="${extname}"/>
 	</target>
 
 	<!-- deprecated junit targets -->
@@ -144,7 +129,7 @@
 	</target>
 
 	<target name="codequality" description="executes all codequality tests for this extension">
-		<pmd extensions="${extname}" />
+		<sonarcheck extensions="${extname}" />
 	</target>
 
 	<target name="localizationtest" description="runs the localizationtest to see if all types are localized within the extension">
