Ajustes para el impuesto de publicidad en las pantallas de inicio , declaracion, pago y menu declaracion

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -159,6 +159,12 @@ sdh.validacontribuyente_simplificado_impDelineacion.url=https://vhshdpodci.hec.s
 sdh.validacontribuyente_simplificado_impDelineacion.user=wspouser
 sdh.validacontribuyente_simplificado_impDelineacion.password=PodBogda1ados20*
 
+sdh.validacontribuyente_simplificado_impPublicidad.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/impPublicidad
+sdh.validacontribuyente_simplificado_impPublicidad.user=wspouser
+sdh.validacontribuyente_simplificado_impPublicidad.password=PodBogda1ados20*
+
+
+
 
 
 ####################################################################
