Ajuste para impuestos vehicular, predial, gasolina e ICA , para l aimpresion del certificado de pago

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -197,6 +197,13 @@ sdh.validacontribuyente_simplificado_impPublicidad.user=wspouser
 sdh.validacontribuyente_simplificado_impPublicidad.password=POw3bs3rv18
 
 ####################################################################
+################ Valida contribuyente simplificado #################
+################ Valida contribuyente simplificado - ICA #####
+sdh.validacontribuyente_simplificado_impICA.url=https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/ingreso/impIca
+sdh.validacontribuyente_simplificado_impICA.user=wspouser
+sdh.validacontribuyente_simplificado_impICA.password=POw3bs3rv18
+
+####################################################################
 ################ Actualiza mi RIT ##################################
 sdh.creamodcontribuyente.url=https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/ingreso/creamodCont/
 sdh.creamodcontribuyente.user=wspouser
