Delineacion urbana (vista agente autorizado)  - ajuste para pasar a liquidador

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -160,6 +160,7 @@ sdh.validacontribuyente.password=PodBogda1ados20*
 sdh.validacontribuyente_simplificado.url=https://vhshdwpdwd01.hec.shd.gov.co:44330/RESTAdapter/ingreso/validaContrib/
 sdh.validacontribuyente_simplificado.user=wspouser
 sdh.validacontribuyente_simplificado.password=PodBogda1ados20*
+sdh.validacontribuyente_simplificado.timeout=1500
 
 ####################################################################
 ################ Valida contribuyente simplificado #################
