--- a/hybris/hybris/bin/custom/sdh/sdhpse/build.xml
+++ b/hybris/hybris/bin/custom/sdh/sdhpse/build.xml
@@ -2,7 +2,7 @@
 <!--
  Copyright (c) 2020 SAP SE or an SAP affiliate company. All rights reserved.
 -->
-<project name="sdhpse" default="all">
+<project name="datahubbackoffice" default="all">
 	<property file="platformhome.properties" />
 
 	<!-- next line is only for eclipse to get rid of warnings -->
