SDH Payment Service Register URL (Property)

--- a/hybris/hybris/config-dev/local.properties
+++ b/hybris/hybris/config-dev/local.properties
@@ -653,4 +653,4 @@ recaptcha.privatekey=6LfScpsUAAAAAGxNGH8El8lFJRg0_e7vSXsDFznz
 #############Maintenance view redirection ##########################
 webapps.redirection.url=/bogota/serverMaintenance.jsp
 
-
+sdh.payment.service.register.url = https://oficinavirtualpre.shd.gov.co/pagoenlinea/resources/paymentservices/register
