--- a/hybris/hybris/config-prd/local.properties
+++ b/hybris/hybris/config-prd/local.properties
@@ -725,3 +725,5 @@ proxy.ssl.port=443
 # By default the content of jmxremote.password defined in config/tomcat/conf ist used.
 #tomcat.jmx.port=9003
 #tomcat.jmx.server.port=9004
+
+sdh.payment.service.register.url = https://oficinavirtualpre.shd.gov.co/pagoenlinea/resources/paymentservices/register
