Ajustes para mostrar mensaje de transaccion cancelada por parte de SIT_II

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -799,4 +799,8 @@ proxy.ssl.port=443
 #tomcat.jmx.port=9003
 #tomcat.jmx.server.port=9004
 
+
+####################################################################
+#############SIT II ##########################
 sdh.payment.service.register.url = https://oficinavirtualpre.shd.gov.co/pagoenlinea/resources/paymentservices/register
+sdh.payment.service.retorno.url = https://qasnuevaoficinavirtual.shd.gov.co/bogota/es/contribuyentes
