Se retira el servico validaCont en certificacion MI RIT para gasolina y publicidad

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -159,7 +159,7 @@ sdh.validacontribuyente.password=PodBogda1ados20*
 
 ####################################################################
 ################ Datos para registro ###############################
-sdh.consultarBP.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/ingreso/ConsultarBP
+sdh.consultarBP.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ingreso/ConsultarBP
 sdh.consultarBP.user=wspouser
 sdh.consultarBP.password=PodBogda1ados20*
 
