Se agregan cambios para concesionarios

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -694,6 +694,12 @@ sdh.agentesAutBP.createCase.user=wspouser
 sdh.agentesAutBP.createCase.password=PodBogda1ados20*
 
 ####################################################################
+######################## Concesionarios ############################
+sdh.concesionarios.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/gestban/Concesionarios
+sdh.concesionarios.user=wspouser
+sdh.concesionarios.password=PodBogda1ados20*
+
+####################################################################
 ########## Servicios de pago en línea###############################
 ####################################################################
 
