Ajustes para pagos con facturacion

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -704,6 +704,16 @@ sdh.relacionPagos.password=POw3bs3rv18
 
 
 ####################################################################
+######################Facturacion Pagos ############################
+####################################################################
+sdh.facturacionPagos.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/FacturacionPagos
+sdh.facturacionPagos.user=wspouser
+sdh.facturacionPagos.password=PodBogda1ados20*
+
+
+
+
+####################################################################
 ########## Catalogos                 ###############################
 ####################################################################
 
