--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -182,6 +182,16 @@ sdh.validacontribuyente_simplificado_impDelineacion.url=https://vhshdpotci.hec.s
 sdh.validacontribuyente_simplificado_impDelineacion.user=wspouser
 sdh.validacontribuyente_simplificado_impDelineacion.password=POw3bs3rv18
 
+
+####################################################################
+################ Valida contribuyente simplificado #################
+################ Valida contribuyente simplificado - ICA #####
+sdh.validacontribuyente_simplificado_impICA.url=https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/ingreso/impIca
+sdh.validacontribuyente_simplificado_impICA.user=wspouser
+sdh.validacontribuyente_simplificado_impICA.password=POw3bs3rv18
+
+
+
 ####################################################################
 ################ Valida contribuyente simplificado #################
 ################ Valida contribuyente simplificado - predial #####
