Impuestos disponibles y catalogos de año gravable (Mi rit, impuestos, facturacion, consultas)

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -725,30 +725,75 @@ sdh.facturacionPagos.password=PodBogda1ados20*
 ########## Catalogos                 ###############################
 ####################################################################
 
-####################################################################
-########## Estado de cuenta             ############################
-impuestosActivos.estadocuenta.predial=
-impuestosActivos.estadocuenta.vehiculos=
-impuestosActivos.estadocuenta.ica=
-impuestosActivos.estadocuenta.reteica=
-impuestosActivos.estadocuenta.gasolina=X
-impuestosActivos.estadocuenta.delineacion=
-impuestosActivos.estadocuenta.publicidad=X
+###########     Impuestos activos       ############################
+########## Menu Consultas             ############################
+impuestosActivos.consultas.predial=X
+impuestosActivos.consultas.vehiculos=X
+impuestosActivos.consultas.ica=
+impuestosActivos.consultas.reteica=
+impuestosActivos.consultas.gasolina=X
+impuestosActivos.consultas.delineacion=X
+impuestosActivos.consultas.publicidad=X
 
-####################################################################
+########## Menu impuestos               ############################
+impuestosActivos.impuestos.predial=X
+impuestosActivos.impuestos.vehiculos=X
+impuestosActivos.impuestos.ica=
+impuestosActivos.impuestos.reteica=
+impuestosActivos.impuestos.gasolina=X
+impuestosActivos.impuestos.delineacion=X
+impuestosActivos.impuestos.publicidad=X
+
+########## Menu facturacion               ############################
+impuestosActivos.facturacion.predial=X
+impuestosActivos.facturacion.vehiculos=X
+impuestosActivos.facturacion.ica=
+impuestosActivos.facturacion.reteica=
+impuestosActivos.facturacion.gasolina=
+impuestosActivos.facturacion.delineacion=
+impuestosActivos.facturacion.publicidad=
+
+########## Menu presentar declaracion               ############################
+impuestosActivos.presentarDeclaracion.predial=X
+impuestosActivos.presentarDeclaracion.vehiculos=X
+impuestosActivos.presentarDeclaracion.ica=
+impuestosActivos.presentarDeclaracion.reteica=
+impuestosActivos.presentarDeclaracion.gasolina=X
+impuestosActivos.presentarDeclaracion.delineacion=X
+impuestosActivos.presentarDeclaracion.publicidad=X
+
+########## Mi RIT               ############################
+impuestosActivos.mirit.predial=X
+impuestosActivos.mirit.vehiculos=X
+impuestosActivos.mirit.ica=
+impuestosActivos.mirit.reteica=
+impuestosActivos.mirit.gasolina=X
+impuestosActivos.mirit.delineacion=X
+impuestosActivos.mirit.publicidad=X
+
+
+############### Determinacion Año gravable #########################
 ##########      Facturacion             ############################
-configCatalogos.facturacion_anioBase=
-configCatalogos.facturacion_cantidadAnios=4
-configCatalogos.facturacion_cantidadAniosCorrimiento=
-configCatalogos.facturacion_valSeleccionar=
+configCatalogos.anioBase.facturacion=
+configCatalogos.cantidadAnios.facturacion=1
+configCatalogos.cantidadAniosCorrimiento.facturacion=
+configCatalogos.valSeleccionar.facturacion=
 
-####################################################################
 ########## Sobretasa Gasolina           ############################
-configCatalogos.sobretasagasolina_anioBase=
-configCatalogos.sobretasagasolina_cantidadAnios=1
-configCatalogos.sobretasagasolina_cantidadAniosCorrimiento=
-configCatalogos.sobretasagasolina_valSeleccionar=
+configCatalogos.anioBase.sobretasagasolina=
+configCatalogos.cantidadAnios.sobretasagasolina=1
+configCatalogos.cantidadAniosCorrimiento.sobretasagasolina=
+configCatalogos.valSeleccionar.sobretasagasolina=
 
+##########      Consultas             ############################
+# solo es relevante el campo: configCatalogos.cantidadAnios.Consultas #
+#Pendiente implementar en este archivo, actualmente en archivo sdhJavascriptVariables.tag
+#configCatalogos.cantidadAnios.Consultas.predial=1
+#configCatalogos.cantidadAnios.Consultas.vehiculos=1
+#configCatalogos.cantidadAnios.Consultas.ica=1
+#configCatalogos.cantidadAnios.Consultas.gasolina=2
+#configCatalogos.cantidadAnios.Consultas.delineacion=1
+#configCatalogos.cantidadAnios.Consultas.publicidad=2
 
 
 ####################################################################
