obligaciones pendientes (predial) - ajuste para realizar la llamada al WS en partes

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -829,6 +829,11 @@ configCatalogos.cantidadAniosCorrimiento.sobretasagasolina=
 configCatalogos.valSeleccionar.sobretasagasolina=
 
 
+########## Sobretasa Gasolina           ############################
+config.obligacionesPendientes.totalReg=200
+config.obligacionesPendientes.rango=50
+
+
 ####################################################################
 ########## Servicios de pago en línea###############################
 ####################################################################
