Ajuste para mostrar Mis representantes en la pagina de Contribuyentes

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -829,7 +829,8 @@ configCatalogos.cantidadAniosCorrimiento.sobretasagasolina=
 configCatalogos.valSeleccionar.sobretasagasolina=
 
 
-########## Sobretasa Gasolina           ############################
+####################################################################
+########## Obligaciones pendientes grandes contribuyentes###########
 config.obligacionesPendientes.totalReg=200
 config.obligacionesPendientes.rango=50
 
