Se agregan cambios para retenciones practicadas

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -727,7 +727,16 @@ sdh.facturacionPagos.user=wspouser
 sdh.facturacionPagos.password=POw3bs3rv18
 
 
+####################################################################
 
+############### Retenciones Practicadas ############################
+####################################################################
+
+####################################################################
+############  Retenciones  ####################################
+sdh.retenciones.practicadas.url=https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/ingreso/ConsRetenPractic
+sdh.retenciones.practicadas.user=wspouser
+sdh.retenciones.practicadas.password=POw3bs3rv18
 
 ####################################################################
 ########## Catalogos                 ###############################
