Se agregan cambios para descarga de reporte de retenciones practicadas

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -750,6 +750,10 @@ sdh.retenciones.practicadas.url=https://vhshdpotci.hec.shd.gov.co:50001/RESTAdap
 sdh.retenciones.practicadas.user=wspouser
 sdh.retenciones.practicadas.password=POw3bs3rv18
 
+sdh.retenciones.practicadas.reporte.url= https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/ingreso/ImpresionReporte
+sdh.retenciones.practicadas.reporte.user=wspouser
+sdh.retenciones.practicadas.reporte.password=POw3bs3rv18
+
 ####################################################################
 ########## Catalogos                 ###############################
 ####################################################################
